2004-07-09  H.J. Lu  <hongjiu.lu@intel.com>

	PR 240
	* elfxx-ia64.c (elfNN_ia64_relax_section): Only warn br in
	.init/.fini sections when trying to relax it.

2004-07-09  Jie Zhang  <zhangjie@magima.com.cn>

	* elf.c (assign_file_positions_for_segments): Make sure the
	.dynamic section is the first section in the PT_DYNAMIC segment.

2004-07-09  Nick Clifton  <nickc@redhat.com>

	* config.bfd: Change sh-sybmian-elf to sh-*-symbianelf.
	* elf32-sh-symbian.c: Rename the sh_find_elf_flags and
	sh_elf_get_flags_from_mach functions so that they do not conflict
	when this target is built with other sh-elf targets.
	* elf32-sh.c (sh_elf_get_flags_from_mach): Remove bogus
	suppression of this function.
	(sh_elf_find_flags): Likewise.

2004-07-07  Tomer Levi  <Tomer.Levi@nsc.com>

	* Makefile.am (ALL_MACHINES): Add cpu-crx.lo.
	(ALL_MACHINES_CFILES): Add cpu-crx.c.
	(BFD32_BACKENDS): Add elf32-crx.lo.
	(BFD32_BACKENDS_CFILES): Add elf32-crx.c.
	(cpu-crx.lo): New target.
	(elf32-crx.lo): New target.
	* Makefile.in: Regenerate.
	* archures.c (bfd_architecture): Add bfd_{arch,mach}_crx.
	(bfd_archures_list): Add bfd_crx_arch.
	* bfd-in2.h: Regenerate.
	* config.bfd: Handle crx-*-elf*, crx*.
	* configure.in: Handle bfd_elf32_crx_vec.
	* configure: Regenerate.
	* cpu-crx.c: New file.
	* elf32-crx.c: Likewise.
	* libbfd.h: Regenerate.
	* reloc.c: Add BFD_RELOC_CRX_REL4, BFD_RELOC_CRX_REL8,
	BFD_RELOC_CRX_REL8_CMP, BFD_RELOC_CRX_REL16, BFD_RELOC_CRX_REL24,
	BFD_RELOC_CRX_REL32, BFD_RELOC_CRX_REGREL12, BFD_RELOC_CRX_REGREL22,
	BFD_RELOC_CRX_REGREL28, BFD_RELOC_CRX_REGREL32, BFD_RELOC_CRX_ABS16,
	BFD_RELOC_CRX_ABS32, BFD_RELOC_CRX_NUM8, BFD_RELOC_CRX_NUM16,
	BFD_RELOC_CRX_NUM32, BFD_RELOC_CRX_IMM16 and BFD_RELOC_CRX_IMM32
	* targets.c (bfd_elf32_crx_vec): Declare.
	(bfd_target_vector): Add bfd_elf32_crx_vec.

2004-07-06  Nick Clifton  <nickc@redhat.com>

	* config.bfd: Add sh-symbian-elf target.
	* configure.in: Add bfd_elf32_shl_symbian_vec.
	* configure: Regenerate.